# outside

ros/outdoor_bot/: CMakeLists.txt  manifest.xml
ros/outdoor_bot/config/speech/: TARnav_commands.tgz  nav_commands.dic  nav_commands.lm  nav_commands.log_pronounce  nav_commands.sent  nav_commands.txt  nav_commands.vocab
ros/outdoor_bot/config/speechOLD/: TARnav_commands.tgz  nav_commands.dic  nav_commands.lm  nav_commands.log_pronounce  nav_commands.sent  nav_commands.vocab
ros/outdoor_bot/launch/: autonomous.launch  mapping_outdoor.launch  mapview.launch  outdoor.launch  webcam.launch
ros/outdoor_bot/launch/includes/: 3dsensor.launch  amcl_hokuyo.launch  gmapping.launch  hokuyo_outdoor.launch  kinect_object_detection.launch  move_base_outdoor.launch  robot_state_publisher_outdoor.launch  tabletop_segmentation.launch
ros/outdoor_bot/launch/includes/robotPose/: robotPose_outdoor.launch
ros/outdoor_bot/launch/includes/serialComm/: serialComm_outdoor.launch
ros/outdoor_bot/maps/: blank_map.yaml  blank_map_small.pgm  blank_map_small.yaml  first_floor_edited.pgm  first_floor_edited.yaml  new_map.yaml  outside.pgm
ros/outdoor_bot/msg/: NavTargets_msg.msg  digcams_custom.msg  mainTargets_msg.msg  movement_msg.msg  webcams_custom.msg
ros/outdoor_bot/nodes/: NavTargets.cpp  autonomous_node.cpp  baseController_node.cpp  ceiling_tracking_node.cpp  ceiling_tracking_node_test.cpp  commandsController_node.cpp  commandsController_node_OLD.cpp  commandsController_node_pose.cpp  control.cpp  control_node.cpp  digcams.cpp  digcams.h  image_cvproc.cpp  keyboardController_node.cpp  keyboardController_node_OLD.cpp  kinect_aux_node.cpp  mainTargets.cpp  mainTargetsOLD.cpp  movement_node.cpp  objectMatch.cpp  odomTester_node.cpp  patrol_node.cpp  pololu_motor_control.cpp  pololu_motor_control_node.cpp  robotPose_node.cpp  sensors_node.cpp  serialComm_node.cpp  servoController_node.cpp  speechController_node.cpp  talkback.py  voice_nav.py  webcam_target_tracking_node.cpp  webcams.cpp
ros/outdoor_bot/param/: base_local_planner_params_outdoor.yaml  costmap_common_params_outdoor.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ros/outdoor_bot/scripts/: detection_test.py  object_detection_test.py  publish_kinect_frame.py
ros/outdoor_bot/src/: Eye.cpp  Eye.h  blob_detector.cpp  image_converter_new.cpp  robustMatcher.h  robustMatcherORIGINAL.h  robust_matcher.cpp  simple_blobs.cpp
ros/outdoor_bot/src/outdoor_bot/: cluster_bounding_box_finder.py  cluster_bounding_box_finder_3d.py  cluster_bounding_box_finder_server.py  convert_functions.py  geometry_tools.py  gphoto2_helper_functions.cpp  initial_pose.py  object_detection.py  point_cloud.py  tableware_detection.py  transform_listener.py
ros/outdoor_bot/src/outdoor_bot/msg/: _FibonacciAction.py  _FibonacciActionFeedback.py  _FibonacciActionGoal.py  _FibonacciActionResult.py  _FibonacciFeedback.py  _FibonacciGoal.py  _FibonacciResult.py  _NavTargets_msg.py  __init__.py  _digcams_custom.py  _digital_cams_custom.py  _mainTargets_msg.py  _movement_msg.py  _test.py  _webcams_custom.py
ros/outdoor_bot/src/outdoor_bot/srv/: _NavTargets.py  _NavTargets_service.py  __init__.py  _digcams.py  _digcams_service.py  _dirAnt_service.py  _encoders_service.py  _mainTargets_service.py  _test.py
ros/outdoor_bot/src/rcmRadar/: rcm.c  rcm.h  rcmSampleApp.c
ros/outdoor_bot/srv/: NavTargets_service.srv  digcams_service.srv  dirAnt_service.srv  encoders_service.srv  mainTargets_service.srv
ros/outdoor_bot/urdf/: outdoor.urdf
(+9 files in other folders)
